<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingReportActivity">

    <TextView
        android:id="@+id/elapsedMinsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elapsedMinsView"
        android:textSize="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/standardPagesReadView"
        android:layout_below="@id/elapsedMinsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standardPagesReadView"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@id/elapsedMinsView"/>
    <TextView
        android:id="@+id/manualPagesReadView"
        android:layout_below="@id/standardPagesReadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manualPagesReadView"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@id/elapsedMinsView"/>
    <TextView
        android:id="@+id/totalWordsReadView"
        android:layout_below="@id/manualPagesReadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalWordsReadView"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@id/elapsedMinsView"/>

    <TextView
        android:id="@+id/ReadingSpeedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reading Speed:"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/totalWordsReadView"
        android:layout_marginTop="70dp"
        android:textSize="35dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/wpmView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wpmView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ReadingSpeedTitle"
        android:textSize="35dp"
        />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>