<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#474747"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/wpp_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/wpp_TextView"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pageStart_EditText"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/pagestart_EditText"
        android:inputType="number"
        android:shadowColor="#856A6A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wpp_TextView" />

    <EditText
        android:id="@+id/pageEnd_EditText"
        android:layout_width="70dp
"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/pageend_EditText"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/pageStart_EditText"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="332dp"
        android:thumbTint="@color/SliderBeige"
        android:max="100"
        android:progress="40"
        android:rotation="-90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manual_button"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="164dp"
        android:onClick="plusManualPage"
        android:text="Manual"
        app:backgroundTint="@color/buttonRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageStart_EditText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:onClick="launchReadingReport"
        android:text="@string/calculate_button"
        app:backgroundTint="@color/buttonRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

    <TextView
        android:id="@+id/wpm_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/wpm_TextView"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Chronometer
        android:id="@+id/stopwatch"
        android:layout_width="129dp"
        android:layout_height="78dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="00:00"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="StartChronometer"
        android:text="@string/start_buttonText"
        app:backgroundTint="@color/buttonRed"
        app:layout_constraintEnd_toEndOf="@+id/stopwatch"
        app:layout_constraintStart_toStartOf="@+id/stopwatch"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ResetChronometer"
        android:text="Reset"
        app:backgroundTint="@color/buttonRed"
        app:layout_constraintEnd_toEndOf="@+id/start_button"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="to"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pageStart_EditText"
        app:layout_constraintStart_toEndOf="@+id/pageStart_EditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        app:layout_constraintBaseline_toBaselineOf="@+id/pageEnd_EditText"
        app:layout_constraintStart_toEndOf="@+id/pageEnd_EditText" />

    <TextView
        android:id="@+id/PageCount_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="--: Pages"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pageStart_EditText"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/manualWordCount_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="- - : Words"
        app:layout_constraintBottom_toTopOf="@+id/manual_button"
        app:layout_constraintEnd_toEndOf="@+id/manual_button"
        app:layout_constraintStart_toStartOf="@+id/manual_button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:progressTint="@color/SliderBeige"
        android:rotation="-90"
        android:rotationY="0"
        android:scaleY="10"
        android:scrollbarStyle="outsideInset"
        android:progress="40"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>